# xbmc-pvr-addons

./: README  configure.ac
addons/: Makefile.am
addons/pvr.hdhomerun/: Makefile.am  todo.txt
addons/pvr.hdhomerun/addon/: addon.xml.in
addons/pvr.hdhomerun/addon/resources/: settings.xml
addons/pvr.hdhomerun/addon/resources/language/English/: strings.po
addons/pvr.hdhomerun/addon/resources/skins/skin.confluence/720p/: ChannelScan.xml
addons/pvr.hdhomerun/src/: HDHomeRunChannelScan.cpp  HDHomeRunChannelScan.h  HDHomerunChannel.cpp  HDHomerunChannel.h  PVRHDHomeRun.cpp  PVRHDHomeRun.h  client.cpp  client.h
lib/: Makefile.am
lib/libhdhomerun/: Makefile.am  hdhomerun.h
